<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjustesActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="214dp"
        android:layout_height="30dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="48dp"
        android:text="@string/Color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerBackground"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:background="@color/main"
        android:contentDescription="BACKGROUND"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spinnerMain"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:background="@color/main"
        android:contentDescription="MAIN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="190dp"
        android:layout_height="27dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/Fondo"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBackground" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/Idioma"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMain" />

    <RadioGroup
        android:id="@+id/radioGroupIdioma"
        android:layout_width="287dp"
        android:layout_height="130dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/Ingles"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:buttonTint="@color/main"
            android:contentDescription="ING"
            android:text="@string/Ingles"
            android:textSize="24sp"></RadioButton>

        <RadioButton
            android:id="@+id/Español"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:buttonTint="@color/main"
            android:contentDescription="ESP"
            android:text="@string/Español"
            android:textSize="24sp"></RadioButton>
    </RadioGroup>

    <ImageView
        android:id="@+id/imagePerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupIdioma"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/buttonImg"
        android:layout_width="127dp"
        android:layout_height="55dp"
        android:layout_marginTop="19dp"
        android:background="@color/naranja"
        android:text="@string/subir_img"
        android:textColor="#212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePerfil" />

</androidx.constraintlayout.widget.ConstraintLayout>