<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegistrarseActivity">


    <EditText
        android:id="@+id/editPassword"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegistrarse2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginBottom="208dp"
        android:background="@color/main"
        android:text="@string/Registrarse"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserName" />

</androidx.constraintlayout.widget.ConstraintLayout>